# SREES_2026_Zaimovic_PVINV

./: README.md
docs/: README.md  izvjestaj.lyx  manual_dtwin_check.md  natID_dTwin_integration.md  report.lyx  report_final.tex  setup_status.md  test_results.md  what_to_explain.md
docs/generated_examples/: case118_solar_inverter.dmodl  case300_solar_inverter.dmodl  case30_from_gui.dmodl  case30_from_plugin.dmodl  case30_from_plugin.vmodl  case30_safe.dmodl  case30_safe.vmodl  case30_solar_inverter.vmodl  case9_from_dtwin.vmodl  case9_from_plugin.dmodl  case9_from_plugin.vmodl  case9_solar_inverter.dmodl  minimal_safe.dmodl
presentation/: Solar.pptx
src/: CMakeLists.txt  main.cpp
src/cases/: case118.xml  case30.xml  case300.xml  case9.xml
src/config/: solar_inverter.xml
src/natid_compat/BLAS/: Platform.h
src/natid_compat/arch/: MemoryOut.h
src/natid_compat/matrix/: MatrixLib.h
src/plugin/: solar_inverter_plugin.cpp
src/srees/: converter.cpp  converter.hpp  dtwin_model_writer.cpp  dtwin_model_writer.hpp  matrix_adapter.cpp  matrix_adapter.hpp  matrix_adapter_natid.cpp  power_case.cpp  power_case.hpp  solar_inverter.cpp  solar_inverter.hpp  xml_config.cpp  xml_config.hpp
